# zomboid_webmap

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs  zomboid.rs
static/: index.html  main.js
static/modules/: map.js
