[package]
name = "zomboid_webmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version ="0.26.3", features = ["bundled"] }
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
dirs = "4.0"
arc-swap = "1.5.0"
pretty_env_logger = "0.4.0"